---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI057 Do not use `typing.ByteString`, which has unclear semantics and is deprecated
 --> PYI057.pyi:4:20
  |
4 | from typing import ByteString
  |                    ^^^^^^^^^^
  |

PYI057 Do not use `collections.abc.ByteString`, which has unclear semantics and is deprecated
 --> PYI057.pyi:5:29
  |
5 | from collections.abc import ByteString
  |                             ^^^^^^^^^^
  |

PYI057 Do not use `typing.ByteString`, which has unclear semantics and is deprecated
 --> PYI057.pyi:8:4
  |
8 | a: typing.ByteString
  |    ^^^^^^^^^^^^^^^^^
  |

PYI057 Do not use `collections.abc.ByteString`, which has unclear semantics and is deprecated
 --> PYI057.pyi:9:4
  |
9 | b: collections.abc.ByteString
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
